--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.4.3",
     "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
-    "paper-item": "PolymerElements/paper-item#^1.2.1"
+    "paper-item": "PolymerElements/paper-item#^1.2.1",
+    "paper-toast": "https://github.com/PolymerElements/paper-toast.git#^1.3.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
